syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Key";
option objc_class_prefix = "HLW";

package br.com.zup;
import "google/protobuf/struct.proto";

service KeyService {
  rpc create(KeyRequestRest) returns (KeyResponseRest) {}
  rpc list(KeyListRequest) returns (KeyListResponse) {}
  rpc delete(KeyRemoveRequest) returns(KeyRemoveResponse) {}
  rpc retrievePixKey(PixKeyRequest) returns(PixKeyResponse) {}
}

message KeyListRequest {
  string clientId = 1;
}

message KeyListResponse {

  message PixKeyItem {
    string pixId = 1;
    KeyType keyType = 2;
    string pixKey = 3;
    AccountType accountType = 4;
    string createdAt = 5;
  }
  string clientId = 1;
  repeated PixKeyItem pixKeys = 2;
}

message PixKeyRequest {
  string pixKey = 1;
  string clientId = 2;
}

message PixKeyResponse {
  string pixId = 1;
  string clientId = 2;
  KeyType keyType = 3;
  string pixKey = 4;
  ResponseOwner owner = 5;
  BankAccount account = 6;
  string createdAt = 7;
}

message ResponseOwner {
  string name = 1;
  string taxIdNumber = 2;
}

message KeyRemoveRequest {
  string pixId = 1;
  string clientId = 2;
}

message KeyRemoveResponse {
  string key = 1;
  string participant = 2;
  string deletedAt = 3;
}

message KeyRequestRest {
  KeyType keyType = 1;
  string key = 2;
  BankAccount bankAccount = 3;
  Owner owner = 4;
}

message KeyResponseRest {
  string clientId = 1;
  string pixId = 2;
  string createdAt = 3;
}

message ErrorDetails {
  int32 code = 1;
  string message = 2;
}

enum AccountType {
  UNKNOWN_ACCOUNT_TYPE = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum KeyType {
  UNKNOWN_KEY_TYPE = 0;
  CPF = 1;
  CNPJ = 2;
  PHONE = 3;
  EMAIL = 4;
  RANDOM = 5;
}

message Owner {
  string id = 1;
  string name = 2;
  string taxIdNumber = 3;
}

message BankAccount {
  string branch = 1;
  string accountNumber = 2;
  string accountType = 3;
  Institution institution = 4;
}

message Institution {
  string name = 1;
  string participant = 2;
}